2010-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: fix.
	* config/amanda/config.m4: fix.

2010-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/config.m4: Use -a.

2010-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Use -a.

2010-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Use grep.

2010-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/Makefile.am: Add set_full_version to EXTRA_DIST.
	* config/set_full_version: Add the file.

2010-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: New script to update FULL_VERSION from
				   VERSION, svn and git
	* autogen: Execute config/set_full_version
	* Makefile.am: Add dependencies to execute set_full_version if VERSION
	  change, and to re-run configure if FULL_VERSION change.
	* config/amanda/version.m4: Use FULL_VERSION.
	* packaging/deb/buildpkg: Use FULL_VERSION.
	* packaging/rpm/amanda.spec: Use FULL_VERSION.
	* packaging/rpm/buildpkg: Use FULL_VERSION.

2010-03-30  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Run.pm: be selective in import from POSIX
	* server-src/amvault.pl: fix duplicate variable

2010-03-30  Dustin J. Mitchell <dustin@zmanda.com>
	* Makefile.am: add VERSION to EXTRA_DIST
	* config/amanda/version.m4: use $srcdir/VERSION

2010-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* VERSION: 3.2.0alpha.
	* configure.in: Call AMANDA_VERSION.
	* config/amanda/version.m4: Add AMANDA_VERSION.
	* config/amanda/config.m4: Add AMANDA_GET_GIT_INFO.

2010-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Retry direct to tape all aborted dump because
			       of missing holdingdisk space.

2010-03-29  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amcleanup.pl server-src/amflush.c: updated amreport usage

2010-03-28  Dustin J. Mitchell <dustin@zmanda.com>